Added sample article page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h2>First Post: Hello World</h2>
     <div class="date">2025-07-01</div>
     <p>
-      Welcome to my retro-style tech blog hosted with <a href="https://pages.github.com/">GitHub Pages</a>.
+      Welcome to my retro-style tech blog hosted with <a href="https://qloqloq.github.io/smaple_topic.html">One sample article</a>.
       I plan to post technical notes, thoughts, and ideas. Everything here is plain HTML & CSS. No JS. Just like the old days.
     </p>
   </div>
