--- a/data/_topic-template.html
+++ b/data/_topic-template.html
@@ -189,22 +189,17 @@
     </svg>
 </button>
 
-<h1>~/my-tech-blog/rest-api</h1>
-<h2>Understanding REST APIs</h2>
-<div class="date">2025-07-01</div>
+<h1>~/tech-notes/[TOPIC TITLE]</h1>
+<h2>[TOPIC TITLE]</h2>
+<div class="date">[9999-12-31] CHANGE PUBLICATION DATE</div>
 <p>
-    REST (Representational State Transfer) is an architectural style used for
-    designing networked applications. It relies on stateless communication and
-    standard HTTP methods like <code>GET</code>, <code>POST</code>,
-    <code>PUT</code>, and <code>DELETE</code>.
+    TOPIC INTRODUCTION <code>with code snippets if needed</code>
 </p>
-<h3>Why REST?</h3>
+<h3>FIRST PARAGRAPH</h3>
 <p>
-    REST is simple, scalable, and based on existing web standards. It is
-    language agnostic and works seamlessly with HTTP, which makes it ideal for
-    web APIs.
+    PARAGRAPH'S TEXT
 </p>
-<h3>Core Concepts</h3>
+<h3>SECOND PARAGRAPH</h3>
 <ul>
     <li><strong>Resources:</strong> Represented by URIs. Example: <code>/users/123</code>
     </li>
@@ -220,7 +215,7 @@
         needed to complete it.
     </li>
 </ul>
-<h3>Example</h3>
+<h3>CODE EXAMPLES PARGRAPH</h3>
 <pre><code>GET /api/articles/42
 Host: example.com
 
@@ -231,10 +226,9 @@ Response:
   "author": "you"
 }
 </code></pre>
-<h3>Conclusion</h3>
+<h3>CONCLUSION PARAGRAPH</h3>
 <p>
-    REST APIs power most of the modern web. Their simplicity and scalability
-    make them a great choice for building distributed systems.
+    PARAGRAPH'S TEXT
 </p>
 
 <footer>
