Added Make My Own Series root page

--- a/data/make-my-own.html
+++ b/data/make-my-own.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Understanding REST APIs</title>
+    <title>Make My Own Software</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
           rel="stylesheet"/>
     <style>
@@ -189,53 +189,50 @@
     </svg>
 </button>
 
-<h1>~/tech-notes/[TOPIC TITLE]</h1>
-<h2>[TOPIC TITLE]</h2>
-<div class="date">[9999-12-31] CHANGE PUBLICATION DATE</div>
+<h1>~/tech-notes/mmos</h1>
+<h2>Make My Own Software series</h2>
+<div class="date">[02-07-2025]</div>
 <p>
-    TOPIC INTRODUCTION <code>with code snippets if needed</code>
+    This is root page for all my <b>Make My Own Software</b> series where I will be <i>reinventing the wheel</i> by writing my own version of common software tools for learning purposes. <br>
 </p>
-<h3>FIRST PARAGRAPH</h3>
+<h3>Done</h3>
 <p>
-    PARAGRAPH'S TEXT
+    Tools I have managed to write so far: <br>
+    ...
 </p>
-<h3>SECOND PARAGRAPH</h3>
+<h3>Upcoming</h3>
+    Tools I plan to write in near future:
 <ul>
-    <li><strong>Resources:</strong> Represented by URIs. Example: <code>/users/123</code>
-    </li>
-    <li><strong>HTTP Methods:</strong>
-        <ul>
-            <li><code>GET</code> – Retrieve a resource</li>
-            <li><code>POST</code> – Create a new resource</li>
-            <li><code>PUT</code> – Update an existing resource</li>
-            <li><code>DELETE</code> – Remove a resource</li>
-        </ul>
-    </li>
-    <li><strong>Stateless:</strong> Each request must contain all information
-        needed to complete it.
-    </li>
+<input type="checkbox" id="myCheckbox" name="myCheckbox" onclick="return false;">
+   <strong>Database</strong> - <a href="make-my-own-series/02072025_write_my_own_db.html"> read my: "Writing my own database" article</a>
+   <br>
+
+<input type="checkbox" id="myCheckbox" name="myCheckbox" onclick="return false;">
+   <strong>Cache</strong> - not started yet
+   <br>
+
+<input type="checkbox" id="myCheckbox" name="myCheckbox" onclick="return false;">
+  <strong>Message Broker</strong> - not started yet
+   <br>
+<input type="checkbox" id="myCheckbox" name="myCheckbox" onclick="return false;">
+  <strong>Load Balancer</strong> - not started yet
+   <br>
+
+<input type="checkbox" id="myCheckbox" name="myCheckbox" onclick="return false;">
+  <strong>Key-Value Store</strong> - not started yet
+   <br>
+<input type="checkbox" id="myCheckbox" name="myCheckbox" onclick="return false;">
+  <strong>Reverse proxy</strong> - not started yet
+   <br>
+<input type="checkbox" id="myCheckbox" name="myCheckbox" onclick="return false;">
+  <strong>Search engine</strong> - not started yet
+   <br>
+<input type="checkbox" id="myCheckbox" name="myCheckbox" onclick="return false;">
+  <strong>Simple OS kernel</strong> - not started yet
+   <br>
+
+
 </ul>
-<h3>CODE EXAMPLES PARGRAPH</h3>
-<pre><code>GET /api/articles/42
-Host: example.com
-
-Response:
-{
-  "id": 42,
-  "title": "Understanding REST APIs",
-  "author": "you"
-}
-</code></pre>
-<h3>CONCLUSION PARAGRAPH</h3>
-<p>
-    PARAGRAPH'S TEXT
-</p>
-
-<footer>
-    <hr/>
-    <p>Built with ❤️ using HTML/CSS. Source code on <a
-            href="https://github.com/qloqloq/qloqloq.github.io">GitHub</a>.</p>
-</footer>
 
 <script>
     const btn = document.getElementById('themeToggleBtn');
