Updated Make My Own Software series

--- a/data/make-my-own.html
+++ b/data/make-my-own.html
@@ -198,7 +198,8 @@
 <h3>Done</h3>
 <p>
     Tools I have managed to write so far: <br>
-    ...
+
+    <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMHZpYnh2NWp1dXRvaW95b3EwY2Y5OHoxdTBpNm5qZTNxcGloNGdpbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Xx8Qzk2UQJBKZVxrJ1/giphy.gif" alt="Absolutely zero GIF">
 </p>
 <h3>Upcoming</h3>
     Tools I plan to write in near future:
