--- a/data/myos.html
+++ b/data/myos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Make My Own Software</title>
+    <title>Make Your Own Software</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
           rel="stylesheet"/>
     <style>
@@ -189,11 +189,11 @@
     </svg>
 </button>
 
-<h1>~/tech-notes/mmos</h1>
-<h2>Make My Own Software series</h2>
+<h1>~/tech-notes/myos</h1>
+<h2>Make Your Own Software series</h2>
 <div class="date">[02-07-2025]</div>
 <p>
-    This is root page for all my <b>Make My Own Software</b> series where I will be <i>reinventing the wheel</i> by writing my own version of common software tools for learning purposes. <br>
+    This is root page for all <b>Make Your Own Software</b> series where I will be <i>reinventing the wheel</i> by writing my own version of common software tools for learning purposes. <br>
 </p>
 <h3>Done</h3>
 <p>
@@ -205,7 +205,7 @@
     Tools I plan to write in near future:
 <ul>
 <input type="checkbox" id="myCheckbox" name="myCheckbox" onclick="return false;">
-   <strong>Database</strong> - <a href="make-my-own-series/02072025_write_my_own_db.html"> read my: "Writing my own database" article</a>
+   <strong>Database</strong> - <a href="myos/02072025_write_my_own_db.html"> read my: "Writing my own database" article</a>
    <br>
 
 <input type="checkbox" id="myCheckbox" name="myCheckbox" onclick="return false;">
