--- a/data/myos/02072025_database.html
+++ b/data/myos/02072025_database.html
@@ -189,13 +189,13 @@
     </svg>
 </button>
 
-<h1>~/tech-notes/mmos/database</h1>
+<h1>~/tech-notes/myos/database</h1>
 <h2>Writing my own database from scratch</h2>
 <div class="date">[02-07-2025]</div>
 <p>
-    This is first post from <b>Make My Own Software</b> series, where I will be <i>reinventing the wheel</i> by writing my own version of common software tools for learning purposes. <br>
+    This is first post from <b>Make Your Own Software</b> series, where I will be <i>reinventing the wheel</i> by writing my own version of common software tools for learning purposes. <br>
     In this lecture I will be focusing on our beloved relational databases. <br>
-    I will try to keep the order by grouping series in their own sections, so every article from <b>Make My Own Software</b> series, (if) I will (ever) write any, can be found <a href="../make-my-own.html">here</a>
+    I will try to keep the order by grouping series in their own sections, so every article from <b>Make Your Own Software</b> series, (if) I will (ever) write any, can be found <a href="../make-my-own.html">here</a>
     
   <code>with code snippets if needed</code>
 </p>
