Added more research links

--- a/data/myos/02072025_database.html
+++ b/data/myos/02072025_database.html
@@ -207,10 +207,15 @@
 
 <div class="phase">
     <h3>Phase 1: Research</h3>
-    <div class="question">🔹What similar tools exist?</div>
+    <div class="question">🔹What similar open source tools exist?</div>
     <div style="padding-left: 2em;" class="answer"> - <a
             href="https://github.com/sqlite/sqlite">SQLite</a>
-        database engine
+    </div>
+    <div style="padding-left: 2em;" class="answer"> - <a
+            href="https://github.com/h2database/h2database">H2 database</a>
+    </div>
+    <div style="padding-left: 2em;" class="answer"> - <a
+            href="https://github.com/ryenus/hsqldb">HSQLDB</a>
     </div>
 
     <div class="question">🔹What key concepts or jargon do I not understand?
@@ -226,27 +231,37 @@
     <div class="answer">
         <a style="padding-left: 2em;"
            href="https://stackoverflow.com/questions/1052189/how-to-write-a-simple-database-engine">
-            <b>Stackoverflow</b>: How to write a simple database engine [closed]</a>
+            - <b>Stackoverflow</b>: How to write a simple database engine
+            [closed]</a>
         <br>
         <a style="padding-left: 2em;"
            href="https://www.codeproject.com/Articles/7410/Implementation-of-a-B-Tree-Database-Class">
-            Implementation of a B-Tree Database Class</a> <br>
+            - Implementation of a B-Tree Database Class</a> <br>
         <a style="padding-left: 2em;"
            href="https://learn.microsoft.com/en-us/previous-versions/sql/sql-server-2008-r2/bb510424(v=sql.105)?redirectedfrom=MSDN">
-            Designing and Implementing Structured Storage (Database Engine)</a>
+            - Designing and Implementing Structured Storage (Database
+            Engine)</a>
         <br>
-    </div>
-    <div class="question">🔹Analyze source code of <a
-            href="https://github.com/sqlite/sqlite">SQLite</a>
+        <a style="padding-left: 2em;"
+           href="https://cstack.github.io/db_tutorial/">
+            - Let's Build a Simple Database - Writing a sqlite clone from
+            scratch in C</a>
+        <br>
     </div>
 </div>
 
 <div class="phase">
     <h3>Phase 2: Learn the Fundamentals</h3>
-    <div class="question">🔹What do I need to learn first?</div>
+    <div class="question">🔹How the data is stored internally?</div>
     <div style="padding-left: 2em;" class="answer"></div>
 
-    <div class="question">🔹Resources I found useful:</div>
+    <div class="question">🔹How the data is queried?</div>
+    <div style="padding-left: 2em;" class="answer"></div>
+
+    <div class="question">🔹How the data is updated?</div>
+    <div style="padding-left: 2em;" class="answer"></div>
+
+    <div class="question">🔹How the data is deleted?</div>
     <div style="padding-left: 2em;" class="answer"></div>
 </div>
 
