--- a/data/myos/02072025_database.html
+++ b/data/myos/02072025_database.html
@@ -257,17 +257,17 @@
             [closed]</a>
         <br>
         <a style="padding-left: 2em;"
+           href="https://cstack.github.io/db_tutorial/">
+            - <b>Let's Build a Simple Database - Writing a sqlite clone from
+            scratch in C</b></a>
+        <br>
+        <a style="padding-left: 2em;"
            href="https://www.codeproject.com/Articles/7410/Implementation-of-a-B-Tree-Database-Class">
             - Implementation of a B-Tree Database Class</a> <br>
         <a style="padding-left: 2em;"
            href="https://learn.microsoft.com/en-us/previous-versions/sql/sql-server-2008-r2/bb510424(v=sql.105)?redirectedfrom=MSDN">
             - Designing and Implementing Structured Storage (Database
             Engine)</a>
-        <br>
-        <a style="padding-left: 2em;"
-           href="https://cstack.github.io/db_tutorial/">
-            - Let's Build a Simple Database - Writing a sqlite clone from
-            scratch in C</a>
         <br>
     </div>
     <div class="phase">
@@ -277,12 +277,15 @@
         For this I'll be using <a
             href="https://www.postgresql.org/">PostgreSQL</a>
         as an example. <br>
-        I'll mostly rely on <a href="https://www.interdb.jp/pg/">The Internals of PostgreSQL</a> as a reference.<br>
+        I'll mostly rely on <a href="https://www.interdb.jp/pg/">The Internals
+        of PostgreSQL</a> as a reference.<br>
         Your data is basically stored as a set of files you disk.
         Postgres groups any data related to a database in its own directory
         (one dir per database). <br>
-        To get location where Postgres stores all your data, you can run <code>show
-        data_directory;</code> inside your pgsql CLI, which should output
+        To get location where Postgres stores all your data <a
+            href="https://www.postgresql.fastware.com/blog/where-and-how-does-postgresql-actually-store-data-on-disk">visit
+        this link</a>, or you can run:
+        <code>show data_directory;</code> inside your pgsql CLI, which should output
         something
         like:
         <code>testdb=# show data_directory;<br>
@@ -308,25 +311,29 @@
             13920 | template0<br>
             (4 rows)
         </code>
-        Now let's see what files are under /base/16396: (this is just subset of files)
+        Now let's see what files are under /base/16396: (this is just subset of
+        files)
         <code>
             postgres@pop-os:~/14/main/base/16396$ ls -l<br>
             total 8796<br>
-            -rw------- 1 postgres postgres   <b>8192</b> Jul  5 11:51 112<br>
-            -rw------- 1 postgres postgres   <b>8192</b> Jul  5 11:51 113<br>
-            -rw------- 1 postgres postgres <b>122880</b> Jul  5 11:56 1247<br>
-            -rw------- 1 postgres postgres  <b>24576</b> Jul  5 11:51 1247_fsm<br>
-            -rw------- 1 postgres postgres   <b>8192</b> Jul  5 11:51 1247_vm<br>
-            -rw------- 1 postgres postgres <b>450560</b> Jul  5 11:56 1249<br>
-            -rw------- 1 postgres postgres  <b>24576</b> Jul  5 11:51 1249_fsm<br>
-            -rw------- 1 postgres postgres   <b>8192</b> Jul  5 11:51 1249_vm<br>
-            -rw------- 1 postgres postgres      0 Jul  5 11:51 13742<br>
-            -rw------- 1 postgres postgres    512 Jul  5 11:51 pg_filenode.map<br>
-            -rw------- 1 postgres postgres 155936 Jul  5 11:51 pg_internal.init<br>
-            -rw------- 1 postgres postgres      3 Jul  5 11:51 PG_VERSION
+            -rw------- 1 postgres postgres <b>8192</b> Jul 5 11:51 112<br>
+            -rw------- 1 postgres postgres <b>8192</b> Jul 5 11:51 113<br>
+            -rw------- 1 postgres postgres <b>122880</b> Jul 5 11:56 1247<br>
+            -rw------- 1 postgres postgres <b>24576</b> Jul 5 11:51 1247_fsm<br>
+            -rw------- 1 postgres postgres <b>8192</b> Jul 5 11:51 1247_vm<br>
+            -rw------- 1 postgres postgres <b>450560</b> Jul 5 11:56 1249<br>
+            -rw------- 1 postgres postgres <b>24576</b> Jul 5 11:51 1249_fsm<br>
+            -rw------- 1 postgres postgres <b>8192</b> Jul 5 11:51 1249_vm<br>
+            -rw------- 1 postgres postgres 0 Jul 5 11:51 13742<br>
+            -rw------- 1 postgres postgres 512 Jul 5 11:51 pg_filenode.map<br>
+            -rw------- 1 postgres postgres 155936 Jul 5 11:51
+            pg_internal.init<br>
+            -rw------- 1 postgres postgres 3 Jul 5 11:51 PG_VERSION
         </code>
-        What is worth noticing is the size of each of the data files divisible by 8K (8192).
-        The reason for that is by default PostgreSQL keeps data as a 8K blocks (pages).
+        What is worth noticing is the size of each of the data files divisible
+        by 8K (8192).
+        The reason for that is by default PostgreSQL keeps data as a 8K blocks
+        (pages).
 
 
     </div>
@@ -334,38 +341,70 @@
 
 <div class="phase">
     <h3>Phase 2a: What we need? Key components/building blocks</h3>
-    🔹I will be using SQLite as an example. Description of key components can be found under <a href="https://www.sqlite.org/arch.html">original SQLite documentation link</a>,
+    🔹I will be using SQLite as an example. Description of key components can be
+    found under <a href="https://www.sqlite.org/arch.html">original SQLite
+    documentation link</a>,
     but basically what we need is:<br>
     <ul>
-        <li><b>REPL</b> (Read-Eval-Print Loop) - an interface for communicating with the database</li>
-        <li><b>Tokenizer</b> - breaks the SQL text into tokens and hands them to parser</li>
-        <li><b>Parser</b> - assigns meaning to tokens based on their context</li>
-        <li><b>Code Generator</b> - analyze parser's tokens tree and generates bytecode that performs the work of the SQL statement</li>
-        <li><b>Bytecode Engine/Generated code interpreter</b> - a virtual machine that runs generated code</li>
+        <li><b>REPL</b> (Read-Eval-Print Loop) - an interface for communicating
+            with the database
+        </li>
+        <li><b>Tokenizer</b> - breaks the SQL text into tokens and hands them to
+            parser
+        </li>
+        <li><b>Parser</b> - assigns meaning to tokens based on their context
+        </li>
+        <li><b>Code Generator</b> - analyze parser's tokens tree and generates
+            bytecode that performs the work of the SQL statement
+        </li>
+        <li><b>Bytecode Engine/Generated code interpreter</b> - a virtual
+            machine that runs generated code
+        </li>
         <li><b>B-Tree</b> - data structure to store any data on disk</li>
-        <li><b>Page Cache/Pager</b> - in mem caching responsible for reading, writing and caching pages (B-Tree requests data from the disk in fixed-sized pages).</li>
-        <li><b>OS Interface</b> - an abstraction over underlying OS for working on system files, needed for cross system portability</li>
+        <li><b>Page Cache/Pager</b> - in mem caching responsible for reading,
+            writing and caching pages (B-Tree requests data from the disk in
+            fixed-sized pages).
+        </li>
+        <li><b>OS Interface</b> - an abstraction over underlying OS for working
+            on system files, needed for cross system portability
+        </li>
         <li><b>Utilities</b> - symbol tables used by the parser</li>
     </ul>
+    <img src="../../images/myos/db_key_architecture.png"
+         alt="Nothing to see here GIF">
 </div>
 
+<!--<div class="phase">-->
+<!--    <h3>Phase 2b: Why we need? Key components/building blocks</h3>-->
+<!--    🔹I will be using SQLite as an example. Description of key components can be found under <a href="https://www.sqlite.org/arch.html">original SQLite documentation link</a>,-->
+<!--    but basically what we need is:<br>-->
+<!--    <ul>-->
+<!--        <li><b>REPL</b> (Read-Eval-Print Loop) - an interface for communicating with the database</li>-->
+<!--        <li><b>Tokenizer</b> - breaks the SQL text into tokens and hands them to parser</li>-->
+<!--        <li><b>Parser</b> - assigns meaning to tokens based on their context</li>-->
+<!--        <li><b>Code Generator</b> - analyze parser's tokens tree and generates bytecode that performs the work of the SQL statement</li>-->
+<!--        <li><b>Bytecode Engine/Generated code interpreter</b> - a virtual machine that runs generated code</li>-->
+<!--        <li><b>B-Tree</b> - data structure to store any data on disk</li>-->
+<!--        <li><b>Page Cache/Pager</b> - in mem caching responsible for reading, writing and caching pages (B-Tree requests data from the disk in fixed-sized pages).</li>-->
+<!--        <li><b>OS Interface</b> - an abstraction over underlying OS for working on system files, needed for cross system portability</li>-->
+<!--        <li><b>Utilities</b> - symbol tables used by the parser</li>-->
+<!--    </ul>-->
+<!--    <img src="../../images/myos/db_key_architecture.png" alt="Nothing to see here GIF">-->
+<!--</div>-->
+
 <div class="phase">
-    <h3>Phase 2b: Why we need? Key components/building blocks</h3>
-    🔹I will be using SQLite as an example. Description of key components can be found under <a href="https://www.sqlite.org/arch.html">original SQLite documentation link</a>,
-    but basically what we need is:<br>
-    <ul>
-        <li><b>REPL</b> (Read-Eval-Print Loop) - an interface for communicating with the database</li>
-        <li><b>Tokenizer</b> - breaks the SQL text into tokens and hands them to parser</li>
-        <li><b>Parser</b> - assigns meaning to tokens based on their context</li>
-        <li><b>Code Generator</b> - analyze parser's tokens tree and generates bytecode that performs the work of the SQL statement</li>
-        <li><b>Bytecode Engine/Generated code interpreter</b> - a virtual machine that runs generated code</li>
-        <li><b>B-Tree</b> - data structure to store any data on disk</li>
-        <li><b>Page Cache/Pager</b> - in mem caching responsible for reading, writing and caching pages (B-Tree requests data from the disk in fixed-sized pages).</li>
-        <li><b>OS Interface</b> - an abstraction over underlying OS for working on system files, needed for cross system portability</li>
-        <li><b>Utilities</b> - symbol tables used by the parser</li>
-    </ul>
-    <img src="../../images/myos/db_key_architecture.png" alt="Nothing to see here GIF">
+    <h3>Phase 3: Implement MVP</h3>
+    <ol>
+        <li>REPL</li>
+        - an infinite loop which reads and processes input line
+        <li> Backend</li>
+        <dl> - Data structures</dl>
+        <dl> - File IO</dl>
+        <li> Compiler</li>
+        <li> Core</li>
+    </ol>
 </div>
+
 
 <div class="phase">
     <h3>Phase 2: Learn the Fundamentals</h3>
@@ -385,7 +424,7 @@
 <div class="phase">
     <h3>Phase 3: Naive Implementation</h3>
     <div class="question">🔹What’s the simplest version I can build?</div>
-    <div style="padding-left: 2em;" class="answer"></div>
+    <div style="padding-left: 2 em;" class="answer"></div>
 
     <div class="question">🔹What assumptions am I making?</div>
     <div style="padding-left: 2em;" class="answer"></div>
